[gd_scene load_steps=7 format=3 uid="uid://dbjvti3tqfwnw"]

[ext_resource type="FontFile" uid="uid://5omnji23q37m" path="res://art/fonts/Ethnocentric Rg.otf" id="1_21rum"]
[ext_resource type="Script" path="res://gameObjects/levels/main_menu.gd" id="1_kaojk"]
[ext_resource type="Texture2D" uid="uid://ckd8bpknjet0h" path="res://art/Custom/cap.PNG" id="2_fsn74"]
[ext_resource type="FontFile" uid="uid://dbn2auu4o2kfw" path="res://art/fonts/AldotheApache.ttf" id="2_p8hjk"]
[ext_resource type="Script" path="res://gameObjects/levels/blackOutScreen.gd" id="4_5vi5j"]
[ext_resource type="AudioStream" uid="uid://g2pw4rlh6l6w" path="res://sfx/Space_Ambience_and_Sound_Pack/Ambience_And_Loops/Ambient_9.wav" id="6_88a16"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kaojk")

[node name="Cap" type="Sprite2D" parent="."]
position = Vector2(1556, 614)
scale = Vector2(1.89664, 1.89664)
texture = ExtResource("2_fsn74")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.049
anchor_right = 0.709
anchor_bottom = 0.274
offset_left = -0.720001
offset_top = 0.079998
offset_right = 0.719849
offset_bottom = 0.0799866
theme_override_fonts/font = ExtResource("1_21rum")
theme_override_font_sizes/font_size = 200
text = "CM-214"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.121
anchor_top = 0.247
anchor_right = 0.806
anchor_bottom = 0.318
offset_left = 256.68
offset_top = -7.76001
offset_right = 255.48
offset_bottom = -8.44003
theme_override_fonts/font = ExtResource("1_21rum")
theme_override_font_sizes/font_size = 40
text = "Combat Module #214"

[node name="buttons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.287
anchor_right = 0.329
anchor_bottom = 0.755
offset_top = 0.0400085
offset_right = -0.680054
offset_bottom = -3.40009

[node name="Button" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.123
anchor_top = 0.098
anchor_right = 0.923
anchor_bottom = 0.365
offset_left = 0.195
offset_top = -0.196003
offset_right = 0.194977
offset_bottom = -0.230011
theme_override_fonts/font = ExtResource("2_p8hjk")
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="Button3" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.464
anchor_right = 0.923
anchor_bottom = 0.715
offset_left = 0.079998
offset_top = 0.0719757
offset_right = 0.194977
offset_bottom = 0.0699768
theme_override_fonts/font = ExtResource("2_p8hjk")
theme_override_font_sizes/font_size = 100
text = "SpeedRun"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.819
anchor_right = 0.372
anchor_bottom = 0.889
offset_left = 0.959999
offset_top = -0.520081
offset_right = -0.23999
offset_bottom = -0.120056
theme_override_fonts/font = ExtResource("2_p8hjk")
theme_override_font_sizes/font_size = 40
text = "Note: Controller highly recommended.
M&k not supported in this version"

[node name="blackOutScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1915.0
offset_bottom = 1074.0
script = ExtResource("4_5vi5j")

[node name="ColorRect" type="ColorRect" parent="blackOutScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 48.05
anchor_bottom = 27.05
color = Color(0, 0, 0, 1)

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_88a16")
volume_db = -20.0
bus = &"Music"

[connection signal="pressed" from="buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="buttons/Button3" to="." method="_on_button_3_pressed"]
